--- a/index.html
+++ b/index.html
@@ -43,24 +43,25 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5>ტოკი მონსტრი/Tokyo ghoul</h5>
+                        <button><a href="">უყურე</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>პიკის საათი/Rush hours</h5>
+                        <button><a href="">უყურე</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c8/%D0%97%D0%B0%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B0_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B_%D0%9C%D0%B8%D1%80_%D0%BD%D0%B0%D0%B8%D0%B7%D0%BD%D0%B0%D0%BD%D0%BA%D1%83.jpg/800px-%D0%97%D0%B0%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B0_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B_%D0%9C%D0%B8%D1%80_%D0%BD%D0%B0%D0%B8%D0%B7%D0%BD%D0%B0%D0%BD%D0%BA%D1%83.jpg"
+                        class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>სამყაროს გარეთ/МИР НАИЗНАНКУ</h5>
+                        <button><a href="">უყურე</a></button>
                     </div>
                 </div>
             </div>
