--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                     <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>ტოკი მონსტრი/Tokyo ghoul</h5>
-                        <button><a href="">უყურე</a></button>
+                        <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>პიკის საათი/Rush hours</h5>
-                        <button><a href="">უყურე</a></button>
+                        <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -61,7 +61,7 @@
                         class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>სამყაროს გარეთ/МИР НАИЗНАНКУ</h5>
-                        <button><a href="">უყურე</a></button>
+                        <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
             </div>
