--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c8/%D0%97%D0%B0%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B0_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B_%D0%9C%D0%B8%D1%80_%D0%BD%D0%B0%D0%B8%D0%B7%D0%BD%D0%B0%D0%BD%D0%BA%D1%83.jpg/800px-%D0%97%D0%B0%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B0_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B_%D0%9C%D0%B8%D1%80_%D0%BD%D0%B0%D0%B8%D0%B7%D0%BD%D0%B0%D0%BD%D0%BA%D1%83.jpg"
-                        class="d-block w-100" alt="...">
+                    <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>სამყაროს გარეთ/МИР НАИЗНАНКУ</h5>
                         <a href=""><button class="watch">უყურე</button></a>
@@ -76,6 +75,8 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+
     </main>
 </body>
 
