--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
             </button>
         </div>
 
-
+        <a target="_blank" href="/click/banner/15500/place/340" class="bms-link-tag"
+            style="position:absolute; z-index: 9999; width:100%; height:100%">
+            <div style="position:absolute; width:100%; height:100%">
+            </div>
+        </a>
     </main>
 </body>
 
