--- a/index.html
+++ b/index.html
@@ -45,21 +45,24 @@
                 <div class="carousel-item active">
                     <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>ტოკი მონსტრი/Tokyo ghoul</h5>
+                        <h5>ტოკი მონსტრი</h5>
+                        <p>Tokyo ghoul (2014)</p>
                         <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>პიკის საათი/Rush hours</h5>
+                        <h5>პიკის საათი</h5>
+                        <p>Rush hours (1998)</p>
                         <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>სამყაროს გარეთ/МИР НАИЗНАНКУ</h5>
+                        <h5>სამყაროს გარეთ</h5>
+                        <p>МИР НАИЗНАНКУ (2010)</p>
                         <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
@@ -75,12 +78,16 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="id">
 
-        <a target="_blank" href="/click/banner/15500/place/340" class="bms-link-tag"
-            style="position:absolute; z-index: 9999; width:100%; height:100%">
-            <div style="position:absolute; width:100%; height:100%">
-            </div>
-        </a>
+            <a target="_blank" href="/click/banner/15500/place/340" class="bms-link-tag">
+            </a>
+            <iframe scrolling="no"
+                src="https://bmscontent1.adjarabet.com/html/BMS/html5/freespinator/imoviesdesk/"></iframe>
+        </div>
+        <section class="continiue-watch">
+            <i class="fas fa-film"></i>
+        </section>
     </main>
 </body>
 
