continue watch list

--- a/index.html
+++ b/index.html
@@ -85,8 +85,18 @@
             <iframe scrolling="no"
                 src="https://bmscontent1.adjarabet.com/html/BMS/html5/freespinator/imoviesdesk/"></iframe>
         </div>
-        <section class="continiue-watch">
+        <section class="continue-watch">
             <i class="fas fa-film"></i>
+            <div class="text">
+                <p>განაგრძე ყურება<br>/</p>
+            </div>
+            <div class="quantity">
+                <p>(4)</p>
+            </div>
+        </section>
+        <section class="list">
+            <img src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
+                title="სამყარო გარეთ / Mir naiznanku">
         </section>
     </main>
 </body>
