--- a/index.html
+++ b/index.html
@@ -88,15 +88,20 @@
         <section class="continue-watch">
             <i class="fas fa-film"></i>
             <div class="text">
-                <p>განაგრძე ყურება<br>/</p>
+                <p>განაგრძეp ყურება<br>/</p>
             </div>
             <div class="quantity">
                 <p>(4)</p>
             </div>
         </section>
         <section class="list">
-            <img src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
+            <img class="movieI"
+                src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
                 title="სამყარო გარეთ / Mir naiznanku">
+
+            <img class="movieII"
+                src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
+                title="მაწანწალა ძაღლები / Bungou Stray Dogs">
         </section>
     </main>
 </body>
