--- a/index.html
+++ b/index.html
@@ -95,13 +95,15 @@
             </div>
         </section>
         <section class="list">
-            <img class="movieI"
-                src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
-                title="სამყარო გარეთ / Mir naiznanku">
+            <aside class="Movie">
+                <img class="movieI"
+                    src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
+                    title="სამყარო გარეთ / Mir naiznanku">
 
-            <img class="movieII"
-                src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
-                title="მაწანწალა ძაღლები / Bungou Stray Dogs">
+                <img class="movieII"
+                    src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
+                    title="მაწანწალა ძაღლები / Bungou Stray Dogs">
+            </aside>
         </section>
     </main>
 </body>
