--- a/index.html
+++ b/index.html
@@ -96,13 +96,22 @@
         </section>
         <section class="list">
             <aside class="Movie">
-                <img class="movieI"
-                    src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
-                    title="სამყარო გარეთ / Mir naiznanku">
-
-                <img class="movieII"
-                    src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
+                <div class="overlay">
+                    <img src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
+                        title="სამყარო გარეთ / Mir naiznanku">
+                </div>
+                <img src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
                     title="მაწანწალა ძაღლები / Bungou Stray Dogs">
+                <img c src="https://static.imovies.cc/movies/covers/510/228/12228-0ce1e7470313b254646d942e80fb07e0.jpg"
+                    title="ჯარისკაცთა საძმო / Band of Brothers">
+                <img src="https://static.imovies.cc/movies/covers/510/482/878413482-ed340a6544eca1197db0c01303ae294d.jpg"
+                    title="თავისუფალი კაცი / Free Guy">
+                </div>
+                <div class="info">
+                    <a class="movie-info" href="/ka/movies/878447292/Mir-naiznanku/S11/E01/RUS/HIGH">
+                        <div class="movie-title-geo">სამყარო გარეთ</div>
+                        <div class="movie-title-orig">Mir naiznanku</div>
+                    </a>
             </aside>
         </section>
     </main>
