--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
                 <img src="https://static.imovies.cc/movies/covers/510/482/878413482-ed340a6544eca1197db0c01303ae294d.jpg"
                     title="თავისუფალი კაცი / Free Guy">
                 </div>
-                <div class="info">
-                    <a class="movie-info" href="/ka/movies/878447292/Mir-naiznanku/S11/E01/RUS/HIGH">
+                <section class="movie-name">
+                    <div class="info">
                         <div class="movie-title-geo">სამყარო გარეთ</div>
                         <div class="movie-title-orig">Mir naiznanku</div>
-                    </a>
+                        <div class="movie-title-geo">მაწანწალა ძაღლები</div>
+                        <div class="movie-title-orig">Bungou Stray Dogs</div>
+                </section>
             </aside>
         </section>
     </main>
