--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -41,42 +39,45 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>ტოკი მონსტრი</h5>
-                        <p>Tokyo ghoul (2014)</p>
-                        <a href=""><button class="watch">უყურე</button></a>
+            <div class="carusel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>ტოკი მონსტრი</h5>
+                            <p>Tokyo ghoul (2014)</p>
+                            <a href=""><button class="watch">უყურე</button></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>პიკის საათი</h5>
+                            <p>Rush hours (1998)</p>
+                            <a href=""><button class="watch">უყურე</button></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg" class="d-block w-100"
+                            alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>სამყაროს გარეთ</h5>
+                            <p>МИР НАИЗНАНКУ (2010)</p>
+                            <a href=""><button class="watch">უყურე</button></a>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>პიკის საათი</h5>
-                        <p>Rush hours (1998)</p>
-                        <a href=""><button class="watch">უყურე</button></a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>სამყაროს გარეთ</h5>
-                        <p>МИР НАИЗНАНКУ (2010)</p>
-                        <a href=""><button class="watch">უყურე</button></a>
-                    </div>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
         <div class="id">
 
@@ -88,7 +89,7 @@
         <section class="continue-watch">
             <i class="fas fa-film"></i>
             <div class="text">
-                <p>განაგრძეp ყურება<br>/</p>
+                <p>განაგრძე ყურება<br>/</p>
             </div>
             <div class="quantity">
                 <p>(4)</p>
@@ -99,13 +100,13 @@
                 <div class="overlay">
                     <img src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
                         title="სამყარო გარეთ / Mir naiznanku">
-                </div>
-                <img src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
-                    title="მაწანწალა ძაღლები / Bungou Stray Dogs">
-                <img c src="https://static.imovies.cc/movies/covers/510/228/12228-0ce1e7470313b254646d942e80fb07e0.jpg"
-                    title="ჯარისკაცთა საძმო / Band of Brothers">
-                <img src="https://static.imovies.cc/movies/covers/510/482/878413482-ed340a6544eca1197db0c01303ae294d.jpg"
-                    title="თავისუფალი კაცი / Free Guy">
+                    <img src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
+                        title="მაწანწალა ძაღლები / Bungou Stray Dogs">
+                    <img c
+                        src="https://static.imovies.cc/movies/covers/510/228/12228-0ce1e7470313b254646d942e80fb07e0.jpg"
+                        title="ჯარისკაცთა საძმო / Band of Brothers">
+                    <img src="https://static.imovies.cc/movies/covers/510/482/878413482-ed340a6544eca1197db0c01303ae294d.jpg"
+                        title="თავისუფალი კაცი / Free Guy">
                 </div>
                 <section class="movie-name">
                     <div class="info">
