--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -19,12 +21,30 @@
         <section class="wrap">
             <aside class="left">
                 <a href="" class="menu"><i class="fas fa-bars"></i></a>
-                <div class="image">
+                <div class="logo">
                     <img src="./img/adjaranet-logo.png.png">
                 </div>
                 <div class="search">
                     <input type="text" placeholder="ძიება" />
                 </div>
+                <svg fill="none" viewBox="0 0 20 20" width="20" class="svg-icon svg-icon--georgian">
+                    <path fill="#F0F0F0" d="M10 20c5.523 0 10-4.477 10-10S15.523 0 10 0 0 4.477 0 10s4.477 10 10 10z">
+                    </path>
+                    <path fill="#D80027"
+                        d="M19.915 8.696h-8.61V.085a10.1 10.1 0 0 0-2.61 0v8.61H.086a10.1 10.1 0 0 0 0 2.61h8.61v8.61a10.115 10.115 0 0 0 2.61 0v-8.61h8.61a10.115 10.115 0 0 0 0-2.61z">
+                    </path>
+                    <path fill="#D80027"
+                        d="M6.087 4.783V3.48H4.783v1.304H3.479v1.304h1.304v1.305h1.304V6.087h1.305V4.783H6.087zM15.217 4.783V3.48h-1.304v1.304h-1.305v1.304h1.305v1.305h1.304V6.087h1.304V4.783h-1.304zM6.087 13.913v-1.305H4.783v1.305H3.479v1.304h1.304v1.304h1.304v-1.304h1.305v-1.304H6.087zM15.217 13.913v-1.305h-1.304v1.305h-1.305v1.304h1.305v1.304h1.304v-1.304h1.304v-1.304h-1.304z">
+                    </path>
+                </svg>
+                <div class="notefi">
+                    <a href="">
+                        <i class="fas fa-bell"></i>
+                    </a>
+                </div>
+                <a href="">
+                    <i class="fas fa-user-circle"></i>
+                </a>
             </aside>
         </section>
     </header>
@@ -39,48 +59,41 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carusel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>ტოკი მონსტრი</h5>
-                            <p>Tokyo ghoul (2014)</p>
-                            <a href=""><button class="watch">უყურე</button></a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>პიკის საათი</h5>
-                            <p>Rush hours (1998)</p>
-                            <a href=""><button class="watch">უყურე</button></a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg" class="d-block w-100"
-                            alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>სამყაროს გარეთ</h5>
-                            <p>МИР НАИЗНАНКУ (2010)</p>
-                            <a href=""><button class="watch">უყურე</button></a>
-                        </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>ტოკი მონსტრი</h5>
+                        <p>Tokyo ghoul (2014)</p> <a href=""><button class="watch">უყურე</button></a>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="carousel-item"> <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg"
+                        class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>პიკის საათი</h5>
+                        <p>Rush hours (1998)</p> <a href=""><button class="watch">უყურე</button></a>
+                    </div>
+                </div>
+                <div class="carousel-item"> <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg"
+                        class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>სამყაროს გარეთ</h5>
+                        <p>МИР НАИЗНАНКУ (2010)</p> <a href=""><button class="watch">უყურე</button></a>
+                    </div>
+                </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
         <div class="id">
-
             <a target="_blank" href="/click/banner/15500/place/340" class="bms-link-tag">
             </a>
             <iframe scrolling="no"
