--- a/index.html
+++ b/index.html
@@ -124,9 +124,16 @@
                 <section class="movie-name">
                     <div class="info">
                         <div class="movie-title-geo">სამყარო გარეთ</div>
-                        <div class="movie-title-orig">Mir naiznanku</div>
                         <div class="movie-title-geo">მაწანწალა ძაღლები</div>
+                        <div class="movie-title-geo">ჯარისკაცთა საძმო</div>
+                        <div class="movie-title-geo">თავისუფალი კაცი</div>
+                    </div>
+                    <div class="orig">
+                        <div class="movie-title-orig">Mir naiznanku</div>
                         <div class="movie-title-orig">Bungou Stray Dogs</div>
+                        <div class="movie-title-orig">Band of Brothers</div>
+                        <div class="movie-title-orig">FREE GUY</div>
+                    </div>
                 </section>
             </aside>
         </section>
