--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
                     <img src="./img/adjaranet-logo.png.png">
                 </div>
                 <div class="search">
-                    <input type="text" placeholder="ძიება" />
+                    <input type="text" placeholder="ძიება" data-search="" />
                 </div>
                 <svg fill="none" viewBox="0 0 20 20" width="20" class="svg-icon svg-icon--georgian">
                     <path fill="#F0F0F0" d="M10 20c5.523 0 10-4.477 10-10S15.523 0 10 0 0 4.477 0 10s4.477 10 10 10z">
