--- a/index.html
+++ b/index.html
@@ -14,131 +14,15 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css">
     <script src="./script.js" defer></script>
+    <link rel="shortcut icon" href="./img/">
 </head>
 
 <body>
     <header>
-        <section class="wrap">
-            <aside class="left">
-                <a href="" class="menu"><i class="fas fa-bars"></i></a>
-                <div class="logo">
-                    <img src="./img/adjaranet-logo.png.png">
-                </div>
-                <div class="search">
-                    <input type="text" placeholder="ძიება" data-search="" />
-                </div>
-                <svg fill="none" viewBox="0 0 20 20" width="20" class="svg-icon svg-icon--georgian">
-                    <path fill="#F0F0F0" d="M10 20c5.523 0 10-4.477 10-10S15.523 0 10 0 0 4.477 0 10s4.477 10 10 10z">
-                    </path>
-                    <path fill="#D80027"
-                        d="M19.915 8.696h-8.61V.085a10.1 10.1 0 0 0-2.61 0v8.61H.086a10.1 10.1 0 0 0 0 2.61h8.61v8.61a10.115 10.115 0 0 0 2.61 0v-8.61h8.61a10.115 10.115 0 0 0 0-2.61z">
-                    </path>
-                    <path fill="#D80027"
-                        d="M6.087 4.783V3.48H4.783v1.304H3.479v1.304h1.304v1.305h1.304V6.087h1.305V4.783H6.087zM15.217 4.783V3.48h-1.304v1.304h-1.305v1.304h1.305v1.305h1.304V6.087h1.304V4.783h-1.304zM6.087 13.913v-1.305H4.783v1.305H3.479v1.304h1.304v1.304h1.304v-1.304h1.305v-1.304H6.087zM15.217 13.913v-1.305h-1.304v1.305h-1.305v1.304h1.305v1.304h1.304v-1.304h1.304v-1.304h-1.304z">
-                    </path>
-                </svg>
-                <div class="notefi">
-                    <a href="">
-                        <i class="fas fa-bell"></i>
-                    </a>
-                </div>
-                <a href="">
-                    <i class="fas fa-user-circle"></i>
-                </a>
-            </aside>
-        </section>
-    </header>
 
-    <main>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://wallpapercave.com/wp/wp8748637.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>ტოკი მონსტრი</h5>
-                        <p>Tokyo ghoul (2014)</p> <a href=""><button class="watch">უყურე</button></a>
-                    </div>
-                </div>
-                <div class="carousel-item"> <img src="https://flixable.b-cdn.net/hulu/large/rush-hour.jpg"
-                        class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>პიკის საათი</h5>
-                        <p>Rush hours (1998)</p> <a href=""><button class="watch">უყურე</button></a>
-                    </div>
-                </div>
-                <div class="carousel-item"> <img src="http://liveam.tv/assets/images/2020/mir-naiznanku-11.jpg"
-                        class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>სამყაროს გარეთ</h5>
-                        <p>МИР НАИЗНАНКУ (2010)</p> <a href=""><button class="watch">უყურე</button></a>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <div class="id">
-            <a target="_blank" href="/click/banner/15500/place/340" class="bms-link-tag">
-            </a>
-            <iframe scrolling="no"
-                src="https://bmscontent1.adjarabet.com/html/BMS/html5/freespinator/imoviesdesk/"></iframe>
-        </div>
-        <section class="continue-watch">
-            <i class="fas fa-film"></i>
-            <div class="text">
-                <p>განაგრძე ყურება<br>/</p>
-            </div>
-            <div class="quantity">
-                <p>(4)</p>
-            </div>
-        </section>
-        <section class="list">
-            <aside class="Movie">
-                <div class="overlay">
-                    <img src="https://static.imovies.cc/movies/covers/510/292/878447292-24225d059c3f4c867a321fcfcc3678d8.jpg"
-                        title="სამყარო გარეთ / Mir naiznanku">
-                    <img src="https://static.imovies.cc/movies/covers/510/111/878447111-88685c4480a18988124820228b316beb.jpg"
-                        title="მაწანწალა ძაღლები / Bungou Stray Dogs">
-                    <img c
-                        src="https://static.imovies.cc/movies/covers/510/228/12228-0ce1e7470313b254646d942e80fb07e0.jpg"
-                        title="ჯარისკაცთა საძმო / Band of Brothers">
-                    <img src="https://static.imovies.cc/movies/covers/510/482/878413482-ed340a6544eca1197db0c01303ae294d.jpg"
-                        title="თავისუფალი კაცი / Free Guy">
-                </div>
-                <section class="movie-name">
-                    <div class="info">
-                        <div class="movie-title-geo">სამყარო გარეთ</div>
-                        <div class="movie-title-geo">მაწანწალა ძაღლები</div>
-                        <div class="movie-title-geo">ჯარისკაცთა საძმო</div>
-                        <div class="movie-title-geo">თავისუფალი კაცი</div>
-                    </div>
-                    <div class="orig">
-                        <div class="movie-title-orig">Mir naiznanku</div>
-                        <div class="movie-title-orig">Bungou Stray Dogs</div>
-                        <div class="movie-title-orig">Band of Brothers</div>
-                        <div class="movie-title-orig">FREE GUY</div>
-                    </div>
-                </section>
-            </aside>
-        </section>
-    </main>
+
 </body>
 
 </html>
