--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./responsive.css">
     <script src="./script.js" defer></script>
-    <link rel="shortcut icon" href="./img/">
+    <link rel="shortcut icon" href="">
 </head>
 
 <body>
