--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./responsive.css">
     <script src="./script.js" defer></script>
-    <link rel="shortcut icon" href="./img/TMOVIES-logos_transparent.png">
+    <link rel="shortcut icon" href="./img/TMOVIES-logo.png">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <label for="menu-btn" class="menu-icon">
                 <div class="nav-icon"></div>
             </label>
-            <a href="./index.html" class="logo"><img src="./img/TMOVIES-logos_white.png" alt=""></a>
+            <a href="./index.html" class="logo">tmovies</a>
 
             <ul class="menu">
                 <li><a href="#">Main</a></li>
