--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMOVIES</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./responsive.css">
     <script src="./script.js" defer></script>
@@ -30,6 +32,10 @@
                 <li><a href="#">Trailers</a></li>
                 <li><a href="#">Franchises</a></li>
             </ul>
+            <form action="" class="search-box">
+                <input type="text" name="search" placeholder="Search Movie" class="search-input" required />
+                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
         </nav>
     </header>
 
