--- a/index.html
+++ b/index.html
@@ -16,28 +16,36 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navigation">
-            <input type="checkbox" class="menu-btn" id="menu-btn">
-            <label for="menu-btn" class="menu-icon">
-                <div class="nav-icon"></div>
-            </label>
-            <a href="./index.html" class="logo">tmovies</a>
+    <nav class="navigation">
+        <input type="checkbox" class="menu-btn" id="menu-btn">
+        <label for="menu-btn" class="menu-icon">
+            <div class="nav-icon"></div>
+        </label>
+        <a href="./index.html" class="logo">tmovies</a>
 
-            <ul class="menu">
-                <li><a href="#">Main</a></li>
-                <li><a href="#">Movies</a></li>
-                <li><a href="#">TV Shows</a></li>
-                <li><a href="#">Lists</a></li>
-                <li><a href="#">Trailers</a></li>
-                <li><a href="#">Franchises</a></li>
-            </ul>
-            <form action="" class="search-box">
-                <input type="text" name="search" placeholder="Search Movie" class="search-input" required />
-                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </form>
-        </nav>
-    </header>
+        <ul class="menu">
+            <li><a href="#">Main</a></li>
+            <li><a href="#">Movies</a></li>
+            <li><a href="#">TV Shows</a></li>
+            <li><a href="#">Lists</a></li>
+            <li><a href="#">Trailers</a></li>
+            <li><a href="#">Franchises</a></li>
+        </ul>
+        <form action="" class="search-box">
+            <input type="text" name="search" placeholder="Search Movie" class="search-input" required />
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+    </nav>
+    <section id="main-slider">
+
+        <div class="main-slider-box">
+            <div class="main-slider-img">
+                <img src="./img/Tokyo ghoul poster.jpg" alt="Tokyo ghoul">
+            </div>
+        </div>
+
+    </section>
+
 
 
 </body>
