--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <div class="main-slider-img">
                 <img src="./img/Tokyo ghoul poster.jpg" alt="Tokyo ghoul">
             </div>
+
+            <div class="main-slider-text">
+                <div class="bottom-text">
+                    <div class="movie-name"></div>
+                </div>
+            </div>
         </div>
 
     </section>
