--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./responsive.css">
     <script src="./script.js" defer></script>
+    <script src="./swiper-bundle.min.js"></script>
     <link rel="shortcut icon" href="./img/TMOVIES-logo.png">
+
+    <link rel="stylesheet" href="./swiper-bundle.min.css">
 </head>
 
 <body>
@@ -45,42 +48,51 @@
 
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
+                <div class="swiper-slide">Slide 1</div>
+                <div class="swiper-slide">Slide 2</div>
+                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">Slide 4</div>
+                <div class="swiper-slide">Slide 5</div>
+                <div class="swiper-slide">Slide 6</div>
+                <div class="swiper-slide">Slide 7</div>
+                <div class="swiper-slide">Slide 8</div>
+                <div class="swiper-slide">Slide 9</div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
 
-                <div class="swiper-pagination"></div>
+
+        <div class="main-slider-box">
+
+            <a href="#" class="main-slide-overlay">
+                <i class="fa-solid fa-play"></i>
+            </a>
+            <div class="main-slider-img">
+                <img src="./img/Tokyo ghoul poster.jpg" alt="Tokyo ghoul">
             </div>
 
+            <div class="main-slider-text">
+                <span class="quality">
+                    High quality
+                </span>
+                <div class="bottom-text">
 
-            <div class="main-slider-box">
+                    <div class="movie-name">
+                        <span>2014</span>
+                        <strong>Tokyo Ghoul</strong>
+                    </div>
 
-                <a href="#" class="main-slide-overlay">
-                    <i class="fa-solid fa-play"></i>
-                </a>
-                <div class="main-slider-img">
-                    <img src="./img/Tokyo ghoul poster.jpg" alt="Tokyo ghoul">
-                </div>
-
-                <div class="main-slider-text">
-                    <span class="quality">
-                        High quality
-                    </span>
-                    <div class="bottom-text">
-
-                        <div class="movie-name">
-                            <span>2014</span>
-                            <strong>Tokyo Ghoul</strong>
+                    <div class="category-rating">
+                        <div class="category">
+                            <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
                         </div>
-
-                        <div class="category-rating">
-                            <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
-                            </div>
-                            <div class="rating">
-                                <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
-                            </div>
+                        <div class="rating">
+                            <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
     </section>
 
