--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
                     </div>
                 </div>
 
+
+
             </div>
         </div>
 
@@ -276,6 +278,10 @@
 
     </section>
 
+    <div class="slider-btns">
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
 
 
 </body>
