--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
     <link rel="stylesheet" href="./responsive.css">
     <script src="./script.js" defer></script>
     <script src="./swiper-bundle.min.js"></script>
-    <link rel="shortcut icon" href="./img/TMOVIES-logo.png">
+    <script src="./jQuery.js"></script>
+    <link rel="shortcut icon" href="./img/TMOVIES-logo.png.png">
 
     <link rel="stylesheet" href="./swiper-bundle.min.css">
 </head>
 
 <body>
+
+
+    <div id="progress">
+        <span id="progress-value"></span>
+    </div>
+
+
+
     <nav class="navigation">
         <input type="checkbox" class="menu-btn" id="menu-btn">
         <label for="menu-btn" class="menu-icon">
             <div class="nav-icon"></div>
         </label>
-        <a href="./index.html" class="logo">tmovies</a>
+        <a href="./index.html" class="logo">Tmovies</a>
 
         <ul class="menu">
             <li><a href="#">Main</a></li>
@@ -257,7 +266,8 @@
 
                                 <div class="category-rating">
                                     <div class="category">
-                                        <a href="#">Documentary</a>,<a href="#">Reality-TV</a>,<a href="#">TV Series</a>
+                                        <a href="#">Documentary</a>,<a href="#">Reality-TV</a>,<a href="#">TV
+                                            Series</a>
                                     </div>
                                     <div class="rating">
                                         <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.7
@@ -946,7 +956,28 @@
             </div>
 
         </div>
+
+
+
+        <div class="page-number">
+            <a href="#" class="page-active">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            ....
+            <a href="#">100</a>
+        </div>
+
+
     </section>
+
+    <footer>
+        <span class="text">
+            Visit the original site
+        </span>
+        <a href="https://www.imovies.cc/ka" class="logo">iMovies</a>
+    </footer>
+
+
 
 </body>
 
