--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
 
                         <div class="movie-name">
                             <span>2008</span>
-                            <a href="#">welcome to the sticks </a>
+                            <a href="./movie-page.html">welcome to the sticks </a>
                         </div>
 
                         <div class="category-rating">
