--- a/movie-page.html
+++ b/movie-page.html
@@ -79,13 +79,14 @@
                     </div>
 
                 </div>
-                <div class="tittle-bottom">
+                <div class="title-bottom">
+
                     <div class="category">
-                        <strong>category</strong>
+                        <strong>Category</strong>
+                        <a href="#">Comedy</a>
                     </div>
-                    <div class="trailer-btn">
-                        <a href="#" class="watch-btn">Watch Trailer</a>
-                    </div>
+
+                    <a href="#" class="watch-btn">Watch Trailer</a>
                 </div>
             </div>
 
@@ -94,6 +95,22 @@
 
 
             <div class="play-btn-container">
+                <div class="play-btn">
+                    <a href="#">
+                        <i class="fa-solid fa-play"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div id="play" class="play">
+                <a href="javascript:void" class="close-movie">
+                    <i class="fa-solid fa-xmark"></i>
+                </a>
+                <div class="play-movie">
+                    <video id="m-video" controls>
+                        <source src="https://api.imovies.cc/api/v1/movies/4786/files/622895" type="video/mp4">
+                    </video>
+                </div>
             </div>
 
         </div>
