--- a/WttS.html
+++ b/WttS.html
@@ -119,6 +119,23 @@
 
     </section>
 
+    <section class="movie-details">
+        <strong>Welcome to the Sticks</strong>
+        <p>Although living a comfortable life in Salon-de-Provence, a charming town in the South of France, Julie has
+            been feeling depressed for a while. To please her, Philippe Abrams, a post office administrator, her
+            husband, tries to obtain a transfer to a seaside town, on the French Riviera, at any cost. The trouble is
+            that he is caught red-handed while trying to scam an inspector. Philippe is immediately banished to the
+            distant unheard of town of Bergues, in the Far North of France. Leaving his child and wife behind, the
+            crucified man leaves for his frightening destination, a dreadfully cold place inhabited by hard-drinking,
+            unemployed rednecks, speaking an incomprehensible dialect called Ch'ti. Philippe soon realizes that all
+            these ideas were nothing but prejudices and that Bergues is not synonymous with hell...</p>
+    </section>
+
+    <section class="movie-moments">
+        <strong>Movie Moments</strong>
+
+    </section>
+
 </body>
 
 </html>
