--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
 
                         <div class="movie-name">
                             <span>2008</span>
-                            <a href="./movie-page.html">welcome to the sticks </a>
+                            <a href="./WttS.html">welcome to the sticks </a>
                         </div>
 
                         <div class="category-rating">
@@ -957,15 +957,6 @@
 
         </div>
 
-
-
-        <div class="page-number">
-            <a href="#" class="page-active">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            ....
-            <a href="#">100</a>
-        </div>
 
 
     </section>
