Welcome to the Sticks movie page end

--- a/WttS.html
+++ b/WttS.html
@@ -133,7 +133,12 @@
 
     <section class="movie-moments">
         <strong>Movie Moments</strong>
-
+        <div class="moment-s-container">
+            <img src="./img/welcome to the sticks movie moment1.jpg" alt="welcome to the sticks movie moment1">
+            <img src="./img/welcome to the sticks movie moment2.jpg" alt="welcome to the sticks movie moment2">
+            <img src="./img/welcome to the sticks movie moment3.jpg" alt="welcome to the sticks movie moment3">
+            <img src="./img/welcome to the sticks movie moment4.jpg" alt="welcome to the sticks movie moment4">
+        </div>
     </section>
 
 </body>
