life is beautiful movie end

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
                         <div class="movie-name">
                             <span>1997</span>
-                            <a href="#">life is beautiful poster</a>
+                            <a href="./lib.html">life is beautiful</a>
                         </div>
 
                         <div class="category-rating">
