The Green Mile movie page end

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="./index.html" class="logo">Tmovies</a>
 
         <ul class="menu">
-            <li><a href="#">Main</a></li>
+            <li><a href="./index.html">Main</a></li>
             <li><a href="#">Movies</a></li>
             <li><a href="#">TV Shows</a></li>
             <li><a href="#">Lists</a></li>
@@ -841,7 +841,7 @@
 
                         <div class="movie-name">
                             <span>1999</span>
-                            <a href="#">the green mile </a>
+                            <a href="./the green mile.html">the green mile </a>
                         </div>
 
                         <div class="category-rating">
