--- a/papillon.html
+++ b/papillon.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the sticks </title>
+    <title>Papillon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -38,7 +38,7 @@
         <a href="./index.html" class="logo">Tmovies</a>
 
         <ul class="menu">
-            <li><a href="#">Main</a></li>
+            <li><a href="./index.html">Main</a></li>
             <li><a href="#">Movies</a></li>
             <li><a href="#">TV Shows</a></li>
             <li><a href="#">Lists</a></li>
