Luca movie page end

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
 
                         <div class="movie-name">
                             <span>2021</span>
-                            <a href="#">luca </a>
+                            <a href="./Luca.html">luca </a>
                         </div>
 
                         <div class="category-rating">
