HOT SHOTS! PART DEUX movie page end

--- a/Hot Shots.html
+++ b/Hot Shots.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luca</title>
+    <title>HOT SHOTS! PART DEUX</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -133,10 +133,10 @@
     <section class="movie-moments">
         <strong>Movie Moments</strong>
         <div class="moment-s-container">
-            <img src="./img/Luca movie moment1.jpg " alt="Luca movie moment1">
-            <img src="./img/Luca movie moment2.jpg" alt="Luca movie moment2">
-            <img src="./img/Luca movie moment3.jpg" alt="Luca movie moment3">
-            <img src="./img/Luca movie moment4.jpg" alt="Luca movie moment4">
+            <img src="./img/HOT SHOTS! part delux movie moment1.jpg  " alt="HOT SHOTS! part delux movie moment1">
+            <img src="./img/HOT SHOTS! part delux movie moment2.jpg " alt="HOT SHOTS! part delux movie moment2">
+            <img src="./img/HOT SHOTS! part delux movie moment3.jpg " alt="HOT SHOTS! part delux movie moment3">
+            <img src="./img/HOT SHOTS! part delux movie moment4.jpg " alt="HOT SHOTS! part delux movie moment4">
         </div>
     </section>
 
