--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
                         <div class="movie-name">
                             <span>1993</span>
-                            <a href="./HOT SHOTS.html">HOT SHOTS! PART DEUX</a>
+                            <a href="./Hot Shots.html">HOT SHOTS! PART DEUX</a>
                         </div>
 
                         <div class="category-rating">
