THE WAR WITH GRANDPA movie page end

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
 
                         <div class="movie-name">
                             <span>2020</span>
-                            <a href="#">the war with grandpa</a>
+                            <a href="./TWWG.html">the war with grandpa</a>
                         </div>
 
                         <div class="category-rating">
