--- a/TDK.html
+++ b/TDK.html
@@ -123,7 +123,7 @@
 
     <section class="movie-details">
         <strong>THE WAR WITH GRANDPA</strong>
-        <p>A mafia boss and his family are relocated to a sleepy town in France under the witness protection program
+        <p>A mafi boss and his family are relocated to a sleepy town in France under the witness protection program
             after snitching on the mob. Despite the best efforts of CIA Agent Stansfield (Tommy Lee Jones) to keep them
             in line, Fred Manzoni (Robert De Niro), his wife Maggie (Michelle Pfeiffer) and their children Belle (Dianna
             Agron) and Warren (John D'Leo) can't help but revert to old habits and blow their cover by handling their
