--- a/The Family.html
+++ b/The Family.html
@@ -70,7 +70,7 @@
                         <span class="quality">High quality</span>
                         <div class="rating"><img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 6.3
                         </div>
-                        <span>2013</span>
+                        <span>2010</span>
                         <span>111min</span>
                     </div>
 
@@ -122,7 +122,7 @@
     </section>
 
     <section class="movie-details">
-        <strong>THE WAR WITH GRANDPA</strong>
+        <strong>THE FAMILY</strong>
         <p>A mafia boss and his family are relocated to a sleepy town in France under the witness protection program
             after snitching on the mob. Despite the best efforts of CIA Agent Stansfield (Tommy Lee Jones) to keep them
             in line, Fred Manzoni (Robert De Niro), his wife Maggie (Michelle Pfeiffer) and their children Belle (Dianna
@@ -133,7 +133,7 @@
     </section>
 
     <section class="movie-moments">
-        <strong>THE WAR WITH GRANDPA</strong>
+        <strong>THE FAMILY</strong>
         <div class="moment-s-container">
             <img src="./img/the family movie moment1.jpg" alt="the family movie moment1">
             <img src="./img/the family movie moment2.jpg" alt="the family movie moment2">
