HOTEL TRANSYLVANIA: TRANSFORMANIA movie page end

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
                         <div class="movie-name">
                             <span>2022</span>
-                            <a href="#">HOTEL TRANSYLVANIA: TRANSFORMANIA</a>
+                            <a href="./HT.html">HOTEL TRANSYLVANIA: TRANSFORMANIA</a>
                         </div>
 
                         <div class="category-rating">
@@ -552,7 +552,7 @@
 
                         <div class="movie-name">
                             <span>2014</span>
-                            <a href="#">INTERSTELLAR</a>
+                            <a href="./interstellar.html">INTERSTELLAR</a>
                         </div>
 
                         <div class="category-rating">
