--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
                         <div class="movie-name">
                             <span>2011</span>
-                            <a href="#">extremely lought and incredibly close</a>
+                            <a href="./ELIC.html">extremely lought and incredibly close</a>
                         </div>
 
                         <div class="category-rating">
