CAST AWAY movie page end

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
                         <div class="movie-name">
                             <span>2000</span>
-                            <a href="#">cast away</a>
+                            <a href="./CAST AWAY.html">cast away</a>
                         </div>
 
                         <div class="category-rating">
