CAST AWAY movie page end

--- a/CAST AWAY.html
+++ b/CAST AWAY.html
@@ -130,7 +130,7 @@
     <section class="movie-moments">
         <strong>CAST AWAY</strong>
         <div class="moment-s-container">
-            <img src="./img/cast away movie moment1.jpg.jpg" alt="cast away movie moment1">
+            <img src="./img/cast away movie moment1.jpg" alt="cast away movie moment1">
             <img src="./img/cast away movie moment2.jpg" alt="cast away movie moment2">
             <img src="./img/cast away movie moment3.jpg" alt="cast away movie moment3">
             <img src="./img/cast away movie moment4.jpg" alt="cast away movie moment4">
