THE THIRD MURDER, RUSH HOUR, TESLA, TOKYO REVENGERS movie and anime pages end

--- a/ANALYZE THIS.html
+++ b/ANALYZE THIS.html
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="language">
-                        <span>Geo - RUS - Eng</span>
+                        <span>Eng</span>
                     </div>
 
                 </div>
