--- a/WttS.html
+++ b/WttS.html
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="language">
-                        <span>RUS - FRE</span>
+                        <span>RUS</span>
                     </div>
 
                 </div>
