--- a/CAST AWAY.html
+++ b/CAST AWAY.html
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="language">
-                        <span>Geo - RUS - Eng</span>
+                        <span>Eng</span>
                     </div>
 
                 </div>
