DARLING IN THE FRANXX anime page end

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
                         <div class="movie-name">
                             <span>2018</span>
-                            <a href="#">darling in the franxx</a>
+                            <a href="./DITF.html">darling in the franxx</a>
                         </div>
 
                         <div class="category-rating">
