BUNGOU STRAY DOGS anime page end

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
                         <div class="movie-name">
                             <span>2016</span>
-                            <a href="#">Boungo stray dogs</a>
+                            <a href="./BSD.html">Boungo stray dogs</a>
                         </div>
 
                         <div class="category-rating">
