GOTHAM TV Series page end

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="swiper-slide">
                     <div class="main-slider-box">
 
-                        <a href="#" class="main-slide-overlay">
+                        <a href="./GOTHAM.html" class="main-slide-overlay">
                             <i class="fa-solid fa-play"></i>
                         </a>
                         <div class="main-slider-img">
