МИР НАИЗНАНКУ Reality-TV page end

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="swiper-slide">
                     <div class="main-slider-box">
 
-                        <a href="#" class="main-slide-overlay">
+                        <a href="./МН.html" class="main-slide-overlay">
                             <i class="fa-solid fa-play"></i>
                         </a>
                         <div class="main-slider-img">
@@ -261,7 +261,7 @@
 
                                 <div class="movie-name">
                                     <span>2010</span>
-                                    <strong>MIR NAIZNANKU</strong>
+                                    <strong>МИР НАИЗНАНКУ</strong>
                                 </div>
 
                                 <div class="category-rating">
