--- a/МН.html
+++ b/МН.html
@@ -125,8 +125,9 @@
     <section class="movie-details">
         <strong>МИР НАИЗНАНКУ</strong>
         <p>A show that includes not only the inner but also the outer world. This is what every person dreams of. МИР
-            НАИЗНАНКУ tells about the history and culture of any country. Host of the show "Dmitriy Komarov". Sit down
-            and travel around the world.
+            НАИЗНАНКУ tells the story of the history and culture of any country. In the process of watching you realize
+            how beautiful the world is and how boundless human possibilities are. Host of "Dmitry Komarov". Sit down
+            And travel the world.
         </p>
     </section>
 
