Saving Private Ryan

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
           <div class="swiper-slide">
             <div class="main-slider-box">
-              <a href="./BOB.html" class="main-slide-overlay">
+              <a href="./SPR.html" class="main-slide-overlay">
                 <i class="fa-solid fa-play"></i>
               </a>
               <div class="main-slider-img">
                 <img
-                  src="./img/band of brothers poster.jpg"
+                  src="./img/Saving Private Ryan poster.jpg"
                   alt="BAND OF BROTHERS"
                 />
               </div>
@@ -144,8 +144,8 @@
                 <span class="quality"> High quality </span>
                 <div class="bottom-text">
                   <div class="movie-name">
-                    <span>2001</span>
-                    <strong>BAND OF BROTHERS</strong>
+                    <span>1998</span>
+                    <strong>Saving Private Ryan</strong>
                   </div>
 
                   <div class="category-rating">
@@ -155,7 +155,7 @@
                       >
                     </div>
                     <div class="rating">
-                      <img src="./img/IMDB_Logo_2016.svg.png.png" alt="" /> 9.5
+                      <img src="./img/IMDB_Logo_2016.svg.png.png" alt="" /> 8.6
                     </div>
                   </div>
                 </div>
