--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <ul class="menu">
         <li><a href="./index.html">Main</a></li>
         <li><a href="#">Movies</a></li>
+        <li><a href="#">Animes</a></li>
         <li><a href="#">TV Shows</a></li>
         <li><a href="#">Lists</a></li>
         <li><a href="#">Trailers</a></li>
